Create responsive layout with six subdivisions that break when the subdivision is under 200px

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/normalize-css/normalize.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -24,16 +23,19 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <header>Header</header>
 
-      <div data-c-lead>
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-        <li><a href="https://html5boilerplate.com/">HTML5 Boilerplate</a></li>
-        <li><a href="http://libsass.org/">Sass</a></li>
-      </ul>
+    <div data-centurion>
+        <div data-cc>
+            <header data-cc="u1">Hello New World</header>
+            <p data-cc="u3">A</p>
+            <p data-cc="u4">A</p>
+            <p data-cc="u4">A</p>
+            <p data-cc="u6">B</p>
+        </div>
     </div>
 
+    <footer>Footer</footer>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
