--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <link rel="stylesheet" href="/bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css"/>
+
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
         <!-- endbower -->
@@ -17,8 +19,6 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
-
-        <link rel="stylesheet" href="/bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css"/>
 
     </head>
     <body>
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                <p style="width: 250px" id="resizable" class="ui-widget-content"><image src="https://placekitten.com/g/250/350"></img></p>
+                <p style="border:4px solid #FFF; background: #AAA;" id="resizable" class="ui-widget-content"><image src="https://placekitten.com/g/250/350"></img></p>
                 <p data-cc="u4">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
@@ -65,7 +65,15 @@
   $(function() {
     $( "#resizable" ).resizable({
       autoHide: true,
-      grid: [ $( "#resizable" ).parent().width() / 6, 50],
+        start: function(event, ui){
+            sibTotalWidth = ui.originalSize.width + ui.originalElement.next().outerWidth();
+        },
+        stop: function(event, ui){
+            var cellPercentWidth = Math.min(Math.max(Math.round(ui.originalElement.outerWidth() / ui.originalElement.parent().width() * 6), 0), 6) / 6 * 100;
+            ui.originalElement.css('width', cellPercentWidth + '%');
+
+            console.log(Math.min(Math.max(Math.round(ui.originalElement.outerWidth() / ui.originalElement.parent().width() * 6), 0), 6));
+        },
     });
   });
   </script>
